--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 18rem;">
+<div class="card my-3" style="width: 18rem;">
     <img src="{{post.image.url}}" class="card-img-top" alt="...">
     <div class="card-body">
       <!-- <h5 class="card-title">Card title</h5> -->
