--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -1,4 +1,8 @@
-<div class="card my-3" style="width: 18rem;">
+<div class="row card my-3 offset-2 col-6 col-md-4">
+  <div class = "card-header">
+      <img class="rounded-circle" src="{{post.user.profile_image.url}}" alt="" width="30px">
+    {{post.user}}
+  </div>
     <img src="{{post.image.url}}" class="card-img-top" alt="...">
     <div class="card-body">
       <!-- <h5 class="card-title">Card title</h5> -->
