--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     {% include '_nav.html' %}
-    <div class="container">
+    <div class="container d-flex flex-column align-items-center">
         {% block body %}
         {% endblock %}
     </div>
