--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -1,3 +1,5 @@
+{% load bootstrap5 %}
+
 <div class="row card my-3 offset-2 col-6 col-md-4">
   <div class = "card-header">
       <img class="rounded-circle" src="{{post.user.profile_image.url}}" alt="" width="30px">
@@ -8,5 +10,25 @@
       <!-- <h5 class="card-title">Card title</h5> -->
       <p class="card-text">{{post.content}}</p>
       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+    </div>
+    <div class="card-footer d-line">
+      <form action="{% url 'posts:comment_create' post_id=post.id %}" method="POST">
+        {% csrf_token %}
+        <div class="row">
+          <div class="col-9">
+            {% bootstrap_form form show_label=False %}
+          </div>
+          <div class="col-2">
+            <input type="submit" class="btn btn-primary btn-sm">
+          </div>
+        </div>
+      </form>
+      <div>
+        {% for comment in post.comment_set.all %}
+          <li>
+            {{comment.user}} : {{comment.content}}
+          </li>
+        {% endfor %}
+      </div>
     </div>
   </div>
