--- a/posts/templates/_card.html
+++ b/posts/templates/_card.html
@@ -9,11 +9,13 @@
     <div class="card-body">
       <!-- <h5 class="card-title">Card title</h5> -->
        <div>
-         <a href="{% url 'posts:like' post_id=post.id %}">
-           <i class="bi bi-suit-heart"></i>
-         </a>
+          {% if user in post.like_users.all %}
+            <i class="bi bi-heart-fill" style="color:red;" data-post-id="{{post.id}}">{{post.like_users.all|length}}</i>
+          {% else %}
+            <i class="bi bi-heart"data-post-id="{{post.id}}">{{post.like_users.all|length}}</i>
+          {% endif %}
          <span>
-          {{post.like_users.all}}명이 좋아합니다.
+          명이 좋아합니다.
          </span>
        </div>
       <p class="card-text">{{post.content}}</p>
