--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -1,11 +1,44 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
-<div class="row">
-    {% for post in posts %}
-    {% include '_card.html' %}
+    {% for post in posts %} 
+        <div class="row">
+            {% include '_card.html' %}
+        </div>
     {% endfor %}
-</div>
+
+    <script>
+        let likeBtns = document.querySelectorAll('i')
+        
+        likeBtns.forEach((likeBtn) => {
+            likeBtn.addEventListener('click', (e) => {
+                // console.log(e.target)
+                // console.log(e.target.dataset.postId)
+                const postId = e.target.dataset.postId
+
+                likeRequest(e.target, postId)
+
+            })
+        })
+
+        let likeRequest = async (btn, postId) => {
+            let likeURL = `/posts/${postId}/like-async/`
+            
+            let res = await fetch(likeURL)
+            let result = await res.json()
+
+            if (result.status) {
+                btn.style.color = 'red'
+                btn.classList.remove('bi-heart')
+                btn.classList.add('bi-heart-fill')
+                btn.innerHTML = result.count
+            } else {
+                btn.style.color = 'black'
+                btn.classList.remove('bi-heart-fill')
+                btn.classList.add('bi-heart')
+                btn.innerHTML = result.count
+            }
+        }
+    </script>
 
 {% endblock %}
